--- a/assets/loading.scss
+++ b/assets/loading.scss
@@ -1,3 +1,22 @@
+.page-overlay {
+  position: fixed;
+  display: flex;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.8);
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+  opacity: 1;
+  transition: opacity 0.5s;
+}
+
+.page-overlay.hidden {
+  opacity: 0;
+}
+
 .loader {
   border: 16px solid #f3f3f3;
   border-top: 16px solid #3498db;
@@ -5,6 +24,7 @@
   width: 120px;
   height: 120px;
   animation: spin 2s linear infinite;
+  margin: 0 auto;
 }
 
 @keyframes spin {
