--- a/assets/flip-clock.scss
+++ b/assets/flip-clock.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 
   .digit {
     position: relative;
@@ -24,7 +24,8 @@
       transform-style: preserve-3d;
       transform: rotateX(0deg);
 
-      .front, .back {
+      .front,
+      .back {
         position: absolute;
         width: 100%;
         height: 100%;
